# semstore

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic.rs  custom_embedder.rs  rag.rs
src/: cache.rs  embedder.rs  error.rs  index.rs  lib.rs  main.rs  store.rs
src/embedder/: bge.rs  mod.rs
