[package]
name = "rustkit-semantic"
version = "0.1.0"
edition = "2024"
description = "Local semantic cache for LLM queries — reduce API costs with RAG-based query deduplication"
license = "MIT"

[dependencies]
fastembed = "4"
usearch = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lib]
name = "rustkit_semantic"
path = "src/lib.rs"

[[bin]]
name = "rustkit-semantic"
path = "src/main.rs"
